apps/webapp-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapp-demo
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
