apps/webapp-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: webapp-demo
  labels:
    app: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: httpd
          image: registry.access.redhat.com/ubi9/httpd-24@sha256:0452bea87f74e17a7776a4530ecf5d36e8eae21c7b548c9ffef629a1fa615e2c
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
