apps/webapp-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: webapp-demo
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
