apps/webapp-demo/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web
  namespace: webapp-demo
  labels:
    app: web
spec:
  to:
    kind: Service
    name: web
  port:
    targetPort: 8080
